--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    “Elas [as pessoas grandes] adoram os números. Quando a gente lhes fala de um novo amigo, as pessoas grandes jamais se interessam em saber como ele realmente é. […] Mas perguntam: Qual é a sua idade? Quantos irmãos ele tem? Quanto pesa? Quanto ganha seu pai? Somente assim é que elas julgam conhecê-lo.”
 </body>
 </html>
